[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netsci-toolkit"
version = "0.1"
description = 'A set of useful network science functions'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Cassidy Waldrip", email = "cassidy.waldrip@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Cassidy Waldrip/netsci-toolkit#readme"
Issues = "https://github.com/Cassidy Waldrip/netsci-toolkit/issues"
Source = "https://github.com/Cassidy Waldrip/netsci-toolkit"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/netsci_toolkit tests}"

[tool.coverage.run]
source_pkgs = ["netsci_toolkit", "tests"]
branch = true
parallel = true
omit = [
  "src/netsci_toolkit/__about__.py",
]

[tool.coverage.paths]
netsci_toolkit = ["src/netsci_toolkit", "*/netsci-toolkit/src/netsci_toolkit"]
tests = ["tests", "*/netsci-toolkit/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
